Switch Org - Add header, shimmers, zero state and fix search to ignore active org (#758)
* Add shimmers, zero state, header and fix search bar in switch-org page

* Switch-org page: Add back btn, search animation, make search sticky, fix shimmers and other minor fixes  (#761)

* Add back btn, make search sticky and clear/cancel search bar

* Add transition to search bar, fix overlapping cards and hide content when searchbar on top

* Fix search icon size and padding

* Hide zero state for single org user

* Resolve comments

* Remove ellipsis

* Fix animation and show searchbar on scroll down

* Resolve comments

* Remove search bar open on scroll functionality

--- a/src/app/auth/switch-org/active-org-card/active-org-card.component.scss
+++ b/src/app/auth/switch-org/active-org-card/active-org-card.component.scss
@@ -6,6 +6,7 @@
   padding: 20px 16px;
   color: $black;
   line-height: 1.3;
+  margin-bottom: 16px;
 
   &__header {
     font-size: 18px;
@@ -29,6 +30,12 @@
       color: $blue-black;
       font-weight: 500;
     }
+
+    &__skeleton-icon {
+      height: 100%;
+      border-radius: 8px;
+      padding: 0 8px 8px 0;
+    }
   }
 
   &__content-container {
@@ -49,7 +56,7 @@
 
   &__pill-container {
     margin-left: 8px;
-    max-width: 90px;
+    max-width: 64px;
 
     &__pill {
       padding: 4px 12px;
